--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <button class="btn">Sign In</button>
           <div class="links">
             <span>Forgot Password? <a href="">Click Here</a></span>
-            <span>Don't Have An Account? <a href="">Create One</a></span>
+            <span>Don't Have An Account? <a href="regi.html">Create One</a></span>
           </div>
         </form>
 
